--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <h2 class="h3 text mb-3">Contact</h2>
     <div class="row">
       <div class="col-md-7 d-print-none">
-        <div class="my-2"><form action="Karthikreddy996@gmail.com"
+        <div class="my-2"><form action="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"
     method="POST">
   <div class="row">
     <div class="col-6">
