--- a/index.html
+++ b/index.html
@@ -86,38 +86,46 @@
   <div class="skills-section px-3 px-lg-4">
     <h2 class="h3 mb-3">Professional Skills</h2>
     <div class="row">
-      <div class="col-md-6">
-        <div class="mb-2"><span>Cisco packet trace</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+      <div class="col-md-4">
+        <div class="mb-2"><span>Data Security</span>
         </div>
-        <div class="mb-2"><span>CSS</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+        <div class="mb-2"><span>Server Security</span>
         </div>
-        <div class="mb-2"><span>TCP/IP protocol</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+        <div class="mb-2"><span>DNS,TLS & SSL</span>
+        </div>
+        <div class="mb-2"><span>TCP/IP Protocol</span>
+        </div>
+        <div class="mb-2"><span>Digital Forensics</span>
+        </div>
+        <div class="mb-2"><span>Cisco Packet Tracer</span>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="mb-2"><span>Data Security</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+      <div class="col-md-4">
+        <div class="mb-2"><span>CSS,HTML</span>
         </div>
-        <div class="mb-2"><span>HTML</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+        <div class="mb-2"><span>Kali Linux</span>
         </div>
-        <div class="mb-2"><span>Implementing security program</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+        <div class="mb-2"><span>Virtual Box</span>
+        </div>
+        <div class="mb-2"><span>SSL Server Testing</span>
+        </div>
+        <div class="mb-2"><span>GUI Hash Calculator</span>
+        </div>
+        <div class="mb-2"><span>Penetration Testing</span>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="mb-2"><span>Azure</span>
+        </div>
+        <div class="mb-2"><span>Python</span>
+        </div>
+        <div class="mb-2"><span>GitHub</span>
+        </div>
+        <div class="mb-2"><span>Team Work</span>
+        </div>
+        <div class="mb-2"><span>Leadership </span>
+        </div>
+        <div class="mb-2"><span>Planning and Coordination</span>
         </div>
       </div>
     </div>
@@ -128,13 +136,11 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Team Member <span class="text-muted h6">at Coles</span></div>
-          <div class="text-muted text-small mb-2">Mar, 2020 - Present</div>
-          <div>•	Comfortable using computerized bills and barcode scanners.</div>
-          <div>•	Ability to Work without supervision.</div>
-          <div>•	Communicate effectively with customers and staff.</div>
-          <div>•	Able to adapt to different work environments.</div>
-          <div>•	Can work on rosters, nights, weekends, and public holidays.</div>
+          <div class="h5 mb-1">Digital Interaction Advisor <span class="text-muted h6">at [24]7.ai</span></div>
+          <div class="text-muted text-small mb-2">Jun, 2018 - Oct, 2019</div>
+          <div>•	Worked Closely with all Product development department to create and maintain materials for sales meetings</div>
+          <div>•	Collaborated with product development team to effectively modernizes and update promotions.</div>
+          <div>•	Maximized advertising efforts by content for media relations, corporate communications, and social media posts.</div>
         </div>
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
@@ -148,11 +154,13 @@
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Digital Interaction Advisor <span class="text-muted h6">at [24]7.ai</span></div>
-          <div class="text-muted text-small mb-2">Jun, 2018 - Oct, 2019</div>
-          <div>•	Worked Closely with all Product development department to create and maintain materials for sales meetings</div>
-          <div>•	Collaborated with product development team to effectively modernizes and update promotions.</div>
-          <div>•	Maximized advertising efforts by content for media relations, corporate communications, and social media posts.</div>
+          <div class="h5 mb-1">Team Member <span class="text-muted h6">at Coles</span></div>
+          <div class="text-muted text-small mb-2">Mar, 2020 - Present</div>
+          <div>•	Comfortable using computerized bills and barcode scanners.</div>
+          <div>•	Ability to Work without supervision.</div>
+          <div>•	Communicate effectively with customers and staff.</div>
+          <div>•	Able to adapt to different work environments.</div>
+          <div>•	Can work on rosters, nights, weekends, and public holidays.</div>
         </div>
       </div>
     </div>
