--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
       <div class="container text-center text-lg-left">
         <div class="py-3 clearfix">
           <h1 class="site-title mb-0">Karthik Reddy Samala</h1>
-          <div class="site-nav">
-            <nav role="navigation">
-              <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="https://github.com/Karthikreddysamala" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
-                </li>
-              </ul>
-            </nav>
-          </div>
         </div>
       </div>
     </header>
@@ -49,7 +41,7 @@
   <div class="about-section pt-4 px-3 px-lg-4 mt-1">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="h3 mb-3">About Me</h2>
+        <h2 class="h3 mb-2">About Me</h2>
         <p>An Energetic Network Security Analyst eager to apply with extensive Knowledge of TCP/IP, OSI and CISCO security services to achieve company goals. Dedicated to working hard to make positive contributions.</p>
       </div>
       <div class="col-md-5 offset-md-1">
@@ -198,7 +190,7 @@
     <h2 class="h3 text mb-3">Contact</h2>
     <div class="row">
       <div class="col-md-7 d-print-none">
-        <div class="my-2"><form action="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"
+        <div class="my-2"><form action
     method="POST">
   <div class="row">
     <div class="col-6">
@@ -230,14 +222,6 @@
       <div class="container">
         <div class="my-3">
           <div class="h4">Karthik Reddy Samala</div>
-          <div class="footer-nav">
-            <nav role="navigation">
-              <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="https://github.com/Karthikreddysamala" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
-                </li>
-              </ul>
-            </nav>
-          </div>
         </div>
       </div>
     </footer>
