--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
 
 
   <body id="top">
-    <header class="d-print-none">
-      <div class="container text-center text-lg-left">
-        <div class="py-3 clearfix">
-          <h1 class="site-title mb-0">Karthik Reddy Samala</h1>
-        </div>
-      </div>
-    </header>
+
     <div class="page-content">
       <div class="container">
         <div class="cover shadow-lg bg-white">
@@ -34,7 +28,7 @@
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Karthik Reddy Samala</h2>
         <p data-aos="fade-left" data-aos-delay="100">Network Security Analyst</p>
-        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Resume.pdf" target="_blank">Download CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Hire Me</a></div>
+        <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Resume.pdf" target="_blank">Download CV</a></div>
       </div>
     </div>
   </div>
@@ -173,18 +167,29 @@
         <div class="card-body">
           <div class="h5 mb-1">Bachelor of Electrical and Electronics <span class="text-muted h6">from Jawaharlal Nehru Technological University</span></div>
           <div class="text-muted text-small mb-2">2014 - 2018</div>
-          <div> </div>
-        </div>
-      </div>
-      <div class="timeline-card timeline-card-success card shadow-sm">
-        <div class="card-body">
-          <div class="h5 mb-1">Intermediate <span class="text-muted h6">from Narayana College</span></div>
-          <div class="text-muted text-small mb-2">2012 - 2014</div>
-          <div> </div>
         </div>
       </div>
     </div>
   </div>
+  <hr class="d-print-none"/>
+  <div class="page-break"></div>
+  <div class="education-section px-3 px-lg-4 pb-4">
+    <h2 class="h3 mb-4">Project</h2>
+    <div class="timeline">
+      <div class="timeline-card timeline-card-success card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">IoT DustMite Detection System <span class="text-muted h6">from IT Total Solutions P/L </span></div>
+          <div class="text-muted text-small mb-2">www.ITTotalSolutions.com.au</div>
+          <div>• An end-to-end classification project that predicts the Dust Mite</div>
+            <div>• Performed Machine learning to find the density of the image pattern.</div>
+            <div>• Used Microcontroller to the data direct to cloud based host server.</div>
+            <div>• Served the project as a flask API with a front-end and deployed the app</div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <hr class="d-print-none"/>
   <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
     <h2 class="h3 text mb-3">Contact</h2>
@@ -203,7 +208,7 @@
   <div class="form-group my-2">
     <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Your Message" required></textarea>
   </div>
-  <button class="btn btn-primary mt-2" type="submit">Send</button>
+  <button class="button" type="submit">Send</button>
 </form>
         </div>
       </div>
