--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Karthik Reddy Samala</h2>
-        <p data-aos="fade-left" data-aos-delay="100">Network Security Analyst</p>
+        <p data-aos="fade-left" data-aos-delay="100">Cyber Security Analyst</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Resume.pdf" target="_blank">Download CV</a></div>
       </div>
     </div>
