--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="pb-1">Address</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">119 Bambra Road, Caulfield, Melbourne, Victoria. 3162</div>
+            <div class="pb-1 text-secondary">14 Kay Court, Clayton, Melbourne, Victoria. 3168</div>
           </div>
         </div>
       </div>
@@ -195,7 +195,9 @@
     <h2 class="h3 text mb-3">Contact</h2>
     <div class="row">
       <div class="col-md-7 d-print-none">
-        <div class="my-2"><form action
+        <div class="my-2">
+
+<form action="karthikreddy996@gmail.com"
     method="POST">
   <div class="row">
     <div class="col-6">
@@ -215,7 +217,7 @@
       <div class="col">
         <div class="mt-2">
           <h3 class="h6">Address</h3>
-          <div class="pb-2 text-secondary">119 Bambra Road, Caulfield, Melbourne, Victoria. 3162</div>
+          <div class="pb-2 text-secondary">14 Kay Court, Clayton, Melbourne, Victoria. 3162</div>
           <h3 class="h6">Phone</h3>
           <div class="pb-2 text-secondary">+61420264559</div>
           <h3 class="h6">Email</h3>
