--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
       <div class="col-md-7 d-print-none">
         <div class="my-2">
 
-<form action="karthikreddy996@gmail.com"
-    method="POST">
+<form action="https://formspree.io/f/xqkwwpvz" method="POST">
   <div class="row">
     <div class="col-6">
       <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
