--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Karthik Reddy Samala</h2>
-        <p data-aos="fade-left" data-aos-delay="100">Cyber Security Analyst</p>
+        <p data-aos="fade-left" data-aos-delay="100"></p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Resume.pdf" target="_blank">Download CV</a></div>
       </div>
     </div>
@@ -36,7 +36,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-2">About Me</h2>
-        <p>An Energetic Network Security Analyst eager to apply with extensive Knowledge of TCP/IP, OSI and CISCO security services to achieve company goals. Dedicated to working hard to make positive contributions.</p>
+        <p>Organized and motivated employee eager to apply time management and organizational skills in various environments. Seeking entry-level opportunities to expand skills while facilitating company growth.</p>
       </div>
       <div class="col-md-5 offset-md-1">
         <div class="row mt-2">
@@ -56,13 +56,13 @@
             <div class="pb-1">Phone</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+61420264559</div>
+            <div class="pb-1 text-secondary">+61 420 264 559</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">14 Kay Court, Clayton, Melbourne, Victoria. 3168</div>
+            <div class="pb-1 text-secondary">Clayton, Melbourne, Victoria. 3168</div>
           </div>
         </div>
       </div>
@@ -73,45 +73,45 @@
     <h2 class="h3 mb-3">Professional Skills</h2>
     <div class="row">
       <div class="col-md-4">
-        <div class="mb-2"><span>Data Security</span>
+        <div class="mb-2"><span>• Network operations</span>
         </div>
-        <div class="mb-2"><span>Server Security</span>
+        <div class="mb-2"><span>• Cisco wireless routers and switches</span>
         </div>
-        <div class="mb-2"><span>DNS,TLS & SSL</span>
+        <div class="mb-2"><span>• DNS,TLS & SSL</span>
         </div>
-        <div class="mb-2"><span>TCP/IP Protocol</span>
+        <div class="mb-2"><span>• TCP/IP Protocol</span>
         </div>
-        <div class="mb-2"><span>Digital Forensics</span>
+        <div class="mb-2"><span>• Firewalls and endpoint security</span>
         </div>
-        <div class="mb-2"><span>Cisco Packet Tracer</span>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="mb-2"><span>CSS,HTML</span>
-        </div>
-        <div class="mb-2"><span>Kali Linux</span>
-        </div>
-        <div class="mb-2"><span>Virtual Box</span>
-        </div>
-        <div class="mb-2"><span>SSL Server Testing</span>
-        </div>
-        <div class="mb-2"><span>GUI Hash Calculator</span>
-        </div>
-        <div class="mb-2"><span>Penetration Testing</span>
+        <div class="mb-2"><span>• Data backups</span>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="mb-2"><span>Azure</span>
+        <div class="mb-2"><span>• HTML proficiency</span>
         </div>
-        <div class="mb-2"><span>Python</span>
+        <div class="mb-2"><span>• CSS expertise</span>
         </div>
-        <div class="mb-2"><span>GitHub</span>
+        <div class="mb-2"><span>• JavaScript experience</span>
         </div>
-        <div class="mb-2"><span>Team Work</span>
+        <div class="mb-2"><span>• Wireframes</span>
         </div>
-        <div class="mb-2"><span>Leadership </span>
+        <div class="mb-2"><span>• Microsoft Office</span>
         </div>
-        <div class="mb-2"><span>Planning and Coordination</span>
+        <div class="mb-2"><span>• Decision-making</span>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="mb-2"><span>• Azure</span>
+        </div>
+        <div class="mb-2"><span>• Python</span>
+        </div>
+        <div class="mb-2"><span>• GitHub</span>
+        </div>
+        <div class="mb-2"><span>• Team Work</span>
+        </div>
+        <div class="mb-2"><span>• Leadership </span>
+        </div>
+        <div class="mb-2"><span>• Reporting and documentation</span>
         </div>
       </div>
     </div>
@@ -122,31 +122,32 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Digital Interaction Advisor <span class="text-muted h6">at [24]7.ai</span></div>
-          <div class="text-muted text-small mb-2">Jun, 2018 - Oct, 2019</div>
-          <div>•	Worked Closely with all Product development department to create and maintain materials for sales meetings</div>
-          <div>•	Collaborated with product development team to effectively modernizes and update promotions.</div>
-          <div>•	Maximized advertising efforts by content for media relations, corporate communications, and social media posts.</div>
+          <div class="h5 mb-1">Customer solution specialist <span class="text-muted h6">at Probe Group </span></div>
+          <div class="text-muted text-small mb-2">Jul, 2021 - Nov, 2021</div>
+          <div>•	Handled client inquiries with exceptional professionalism and enthusiasm.</div>
+          <div>•	Provided customer service and issue resolution to increase QA satisfaction levels.</div>
+          <div>•	Engaged customers with proactive strategies to understand needs and develop successful solutions.</div>
+          <div>•	Educated clients on how to conduct transactions with convenient online solutions.</div>
         </div>
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Team Leader <span class="text-muted h6">at DNA Recruitment Solutions </span></div>
-          <div class="text-muted text-small mb-2">Mar, 2020 - Present</div>
-          <div>•	Customer Service Representative for Metro Trains Melbourne at major railway stations, working for LXRA and Metro Tunnel during disruption operations.</div>
-          <div>•	Reporting to Project Coordinators and Project Supervisors.</div>
-          <div>•	Responsible for safety issues and incident management.Skills acquired- Customer Service, Team Leading, Team Management.</div>
-        </div>
+          <div class="h5 mb-1">Digital Interaction advisor  <span class="text-muted h6">at 24/7.ai  </span></div>
+          <div class="text-muted text-small mb-2">Aug, 2018 - Oct, 2019</div>
+          <div>•	Reviewed customer account information to determine current issues and potential solutions.</div>
+          <div>•	Responded quickly to customer inquiries, needs and problems.</div>
+          <div>•	Documented conversations with customers to track requests, problems, and solutions.</div>
+          <div>•	Informed customers about billing procedures, processed payments and provided payment option setup assistance.</div>
+      </div>
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Team Member <span class="text-muted h6">at Coles</span></div>
-          <div class="text-muted text-small mb-2">Mar, 2020 - Present</div>
-          <div>•	Comfortable using computerized bills and barcode scanners.</div>
-          <div>•	Ability to Work without supervision.</div>
-          <div>•	Communicate effectively with customers and staff.</div>
-          <div>•	Able to adapt to different work environments.</div>
-          <div>•	Can work on rosters, nights, weekends, and public holidays.</div>
+          <div class="h5 mb-1">Junior Engineer  <span class="text-muted h6">at Bharat Heavy Electricals Limited </span></div>
+          <div class="text-muted text-small mb-2">Mar, 2018 - Jul, 2018</div>
+          <div>•	Evaluated architectural plans and consulted with clients to understand project scope and objectives.</div>
+          <div>•	Estimated quantities and costs of project materials for owner review.</div>
+          <div>•	Used AutoCad to complete renderings of full project designs and individual components.</div>
+          <div>•	Performed inspections of finished constructions.</div>
         </div>
       </div>
     </div>
@@ -158,14 +159,14 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Masters of Networking - Major in Cyber Security <span class="text-muted h6">from Melbourne Institute of Technology</span></div>
+          <div class="h5 mb-1">Master of Networking - Major in Cyber Security <span class="text-muted h6">from Melbourne Institute of Technology</span></div>
           <div class="text-muted text-small mb-2">2019 - 2021</div>
           <div> </div>
         </div>
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Bachelor of Electrical and Electronics <span class="text-muted h6">from Jawaharlal Nehru Technological University</span></div>
+          <div class="h5 mb-1">Bachelor of Electrical and Electronics Engineering <span class="text-muted h6">from Jawaharlal Nehru Technological University</span></div>
           <div class="text-muted text-small mb-2">2014 - 2018</div>
         </div>
       </div>
@@ -197,7 +198,7 @@
       <div class="col-md-7 d-print-none">
         <div class="my-2">
 
-<form action="https://formspree.io/f/xqkwwpvz" method="POST">
+<form action="https://formspree.io/f/xqkwwpvz" method="post">
   <div class="row">
     <div class="col-6">
       <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
@@ -218,7 +219,7 @@
       <div class="col">
         <div class="mt-2">
           <h3 class="h6">Address</h3>
-          <div class="pb-2 text-secondary">14 Kay Court, Clayton, Melbourne, Victoria. 3162</div>
+          <div class="pb-2 text-secondary">Clayton, Melbourne, Victoria. 3162</div>
           <h3 class="h6">Phone</h3>
           <div class="pb-2 text-secondary">+61420264559</div>
           <h3 class="h6">Email</h3>
